--- a/project-router/package.json
+++ b/project-router/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.0",
